--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,16 +13,6 @@ _setup_env: &setup_kwds
     pip install --no-cache-dir dropbox pytest-cov reprozip
     pip install -e ~/neurodocker
 
-_save_cache_kwds: &save_cache_kwds
-  key: dfs-sfs-v0-{{ .Branch }}-{{ .Revision }}
-  paths:
-    - /tmp/cache
-
-_restore_cache_kwds: &restore_cache_kwds
-  keys:
-    - dfs-sfs-v0-{{ .Branch }}-{{ .Revision }}
-    - dfs-sfs-v0-{{ .Branch }}
-
 
 version: 2
 jobs:
@@ -35,14 +25,18 @@ jobs:
       - run:
           *setup_kwds
       - restore_cache:
-          *restore_cache_kwds
+          keys:
+            - dfs-v0-{{ .Branch }}-{{ .Revision }}
+            - dfs-v0-{{ .Branch }}
       - run:
           name: Test docker image builds
           no_output_timeout: 360m
           command: |
             pytest -k 'test_docker' ~/neurodocker/neurodocker/interfaces/tests/test_mrtrix.py
       - save_cache:
-          *save_cache_kwds
+          key: dfs-sfs-v0-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - /tmp/cache
 
   test_singularity:
     machine:
@@ -52,15 +46,11 @@ jobs:
           *checkout_kwds
       - run:
           *setup_kwds
-      - restore_cache:
-          *restore_cache_kwds
       - run:
           name: Test singularity image builds
           no_output_timeout: 360m
           command: |
             pytest -k 'test_singularity' ~/neurodocker/neurodocker
-      - save_cache:
-          *save_cache_kwds
 
   test_others:
     machine:
@@ -70,15 +60,11 @@ jobs:
           *checkout_kwds
       - run:
           *setup_kwds
-      - restore_cache:
-          *restore_cache_kwds
       - run:
           name: Test others (not docker or singularity)
           no_output_timeout: 30m
           command: |
             pytest -k 'not test_docker and not test_singularity' ~/neurodocker/neurodocker
-      - save_cache:
-          *save_cache_kwds
 
 
 workflows:
