--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,13 +67,12 @@ jobs:
             pytest -k 'not test_docker and not test_singularity' ~/neurodocker/neurodocker
 
 
-
 workflows:
   version: 2
   build_test_deploy:
     jobs:
       - test_docker
-      # - test_singularity
-      # - test_others
+      - test_singularity
+      - test_others
 
 # TODO(kaczmarj): add test_singularity step
