--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           name: Test docker image builds
           no_output_timeout: 360m
           command: |
-            pytest -k 'test_docker' ~/neurodocker/neurodocker
+            pytest -k 'test_docker' ~/neurodocker/neurodocker/interfaces/tests/test_mrtrix.py ~/neurodocker/neurodocker/interfaces/tests/test_miniconda.py
       - save_cache:
           key: dfs-v0-{{ .Branch }}-{{ .Revision }}
           paths:
