--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ workflows:
   build_test_deploy:
     jobs:
       - test_docker
-      - test_singularity
-      - test_others
+      # - test_singularity
+      # - test_others
 
 # TODO(kaczmarj): add test_singularity step
