--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,14 @@ _checkout_kwds: &checkout_kwds
 _setup_env: &setup_kwds
   name: Setup environment
   command: |
-    pyenv global 3.5.2
+    curl -fsSLO https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
+    bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/conda
+    echo "export PATH=~/conda/bin:$PATH" >> ~/.bashrc
+    source ~/.bashrc
+    conda config --system --prepend channels conda-forge
+    conda update -n base -y conda
+    conda update -y --all
+
     pip install -U --no-cache-dir pip
     pip install --no-cache-dir dropbox pytest-cov reprozip
     pip install -e ~/neurodocker
