use correct sudo invocation

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,9 +64,8 @@ jobs:
           name: Install singularity
           command: |
             source ~/.bashrc
-            sudo curl -fsSL --retry 5 http://neuro.debian.net/lists/trusty.us-nh.full \
-            > /etc/apt/sources.list.d/neurodebian.sources.list
-            curl -sSL https://dl.dropbox.com/s/zxs209o955q6vkg/neurodebian.gpg | sudo apt-key add -
+            curl -fsSL http://neuro.debian.net/lists/trusty.us-nh.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
+            curl -fsSL https://dl.dropbox.com/s/zxs209o955q6vkg/neurodebian.gpg | sudo apt-key add -
             (sudo apt-key adv --refresh-keys --keyserver hkp://pool.sks-keyservers.net:80 0xA5D32F012649A5A9 || true)
             sudo apt-get -qq update
             sudo apt-get install -yq singularity-container
