pip install quietly + always save cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ _setup_env: &setup_kwds
     conda update -n base -yq conda
     conda update -yq --all
 
-    pip install -U --no-cache-dir pip
-    pip install --no-cache-dir dropbox pytest-cov reprozip
-    pip install -e ~/neurodocker
+    pip install -q --no-cache-dir -U pip
+    pip install -q --no-cache-dir dropbox pytest-cov reprozip
+    pip install -q --no-cache-dir -e ~/neurodocker
 
 
 version: 2
@@ -44,6 +44,7 @@ jobs:
             pytest -k 'test_docker' ~/neurodocker/neurodocker
       - save_cache:
           key: dfs-v0-{{ .Branch }}-{{ .Revision }}
+          when: always
           paths:
             - /tmp/cache
 
@@ -69,7 +70,7 @@ jobs:
             (sudo apt-key adv --refresh-keys --keyserver hkp://pool.sks-keyservers.net:80 0xA5D32F012649A5A9 || true)
             sudo apt-get -qq update
             sudo apt-get install -yq singularity-container
-            pip install --no-cache-dir singularity
+            pip install -q --no-cache-dir singularity
       - run:
           name: Test singularity image builds
           no_output_timeout: 360m
@@ -78,6 +79,7 @@ jobs:
             pytest -k 'test_singularity' ~/neurodocker/neurodocker
       - save_cache:
           key: srs-v0-{{ .Branch }}-{{ .Revision }}
+          when: always
           paths:
             - /tmp/cache
 
