--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
           no_output_timeout: 360m
           command: |
             source ~/.bashrc
-            pytest -k 'test_singularity' ~/neurodocker/neurodocker/interfaces/tests/test_miniconda.py
+            pytest -k 'test_singularity' ~/neurodocker/neurodocker
       - save_cache:
           key: srs-v0-{{ .Branch }}-{{ .Revision }}
           when: always
