--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
           no_output_timeout: 360m
           command: |
             source ~/.bashrc
-            pytest -k 'test_singularity' ~/neurodocker/neurodocker/interfaces/tests/test_miniconda.py
+            pytest -k 'test_singularity' ~/neurodocker/neurodocker
       - save_cache:
           key: srs-v0-{{ .Branch }}-{{ .Revision }}
           when: always
@@ -103,6 +103,6 @@ workflows:
   version: 2
   build_test_deploy:
     jobs:
-      # - test_docker
+      - test_docker
       - test_singularity
-      # - test_others
+      - test_others
