ENH: add singularity builds to CI tests (#154)
* add singularity client

* add singularity build tests

* minor fixes

* add singularity cache

* minor change

* prepend sudo

* use correct sudo invocation

* add bash_test_file arg

* mkdir for sing files

* do not save in new dir

* bind path to singularity exec test

* fix tests for singularity

* pip install quietly + always save cache

* error on unset variables

* use singularity run instead of exec

* remove execute privileges

* use a cache dir in tmp

* fix runscript syntax

* tmp only test miniconda

* prepend miniconda to path

* use local cache directory

* use local cache

* enh cache path

* run all tests

* suppress find warnings in singularity

* only test miniconda

* tmp minor change

* tmp: fail miniconda test

* fix path

* revert changes

* update new args

* add todos

* fix templates

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ _setup_env: &setup_kwds
     conda update -n base -yq conda
     conda update -yq --all
 
-    pip install -U --no-cache-dir pip
-    pip install --no-cache-dir dropbox pytest-cov reprozip
-    pip install -e ~/neurodocker
+    pip install -q --no-cache-dir -U pip
+    pip install -q --no-cache-dir dropbox pytest-cov reprozip
+    pip install -q --no-cache-dir -e ~/neurodocker
 
 
 version: 2
@@ -44,6 +44,7 @@ jobs:
             pytest -k 'test_docker' ~/neurodocker/neurodocker
       - save_cache:
           key: dfs-v0-{{ .Branch }}-{{ .Revision }}
+          when: always
           paths:
             - /tmp/cache
 
@@ -55,12 +56,32 @@ jobs:
           *checkout_kwds
       - run:
           *setup_kwds
+      - restore_cache:
+          keys:
+            - srs-v0-{{ .Branch }}-{{ .Revision }}
+            - srs-v0-{{ .Branch }}
+            - srs-v0
+      - run:
+          name: Install singularity
+          command: |
+            source ~/.bashrc
+            curl -fsSL http://neuro.debian.net/lists/trusty.us-nh.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
+            curl -fsSL https://dl.dropbox.com/s/zxs209o955q6vkg/neurodebian.gpg | sudo apt-key add -
+            (sudo apt-key adv --refresh-keys --keyserver hkp://pool.sks-keyservers.net:80 0xA5D32F012649A5A9 || true)
+            sudo apt-get -qq update
+            sudo apt-get install -yq singularity-container
+            pip install -q --no-cache-dir singularity
       - run:
           name: Test singularity image builds
           no_output_timeout: 360m
           command: |
             source ~/.bashrc
             pytest -k 'test_singularity' ~/neurodocker/neurodocker
+      - save_cache:
+          key: srs-v0-{{ .Branch }}-{{ .Revision }}
+          when: always
+          paths:
+            - ~/tmp/cache
 
   test_others:
     machine:
