--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,9 @@ jobs:
           command: |
             source ~/.bashrc
             pytest --cov -k 'test_docker' neurodocker
-            coverage -o test_results/coverage.xml
             codecov
-      - store_test_results:
-          *store_test_results_kwds
+      # - store_test_results:
+      #     *store_test_results_kwds
       - save_cache:
           key: dfs-v0-{{ .Branch }}-{{ .Revision }}
           when: always
@@ -86,10 +85,9 @@ jobs:
           command: |
             source ~/.bashrc
             pytest --cov -k 'test_singularity' neurodocker
-            coverage -o test_results/coverage.xml
             codecov
-      - store_test_results:
-          *store_test_results_kwds
+      # - store_test_results:
+      #     *store_test_results_kwds
       - save_cache:
           key: srs-v0-{{ .Branch }}-{{ .Revision }}
           when: always
@@ -111,10 +109,9 @@ jobs:
           command: |
             source ~/.bashrc
             pytest --cov -k 'not test_docker and not test_singularity' neurodocker
-            coverage -o test_results/coverage.xml
             codecov
-      - store_test_results:
-          *store_test_results_kwds
+      # - store_test_results:
+      #     *store_test_results_kwds
 
 
 workflows:
