--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,8 +17,8 @@ _setup_env: &setup_kwds
     conda update -yq --all
 
     pip install -q --no-cache-dir -U pip
-    pip install -q --no-cache-dir dropbox pytest-cov reprozip
-    pip install -q --no-cache-dir -e ~/neurodocker
+    pip install -q --no-cache-dir reprozip codecov
+    pip install -q --no-cache-dir -e ~/neurodocker[dev]
 
 
 version: 2
@@ -26,6 +26,7 @@ jobs:
   test_docker:
     machine:
       *machine_kwds
+    working_directory: ~/neurodocker
     steps:
       - checkout:
           *checkout_kwds
@@ -41,7 +42,8 @@ jobs:
           no_output_timeout: 360m
           command: |
             source ~/.bashrc
-            pytest -k 'test_docker' ~/neurodocker/neurodocker
+            pytest --cov -k 'test_docker' neurodocker
+            codecov
       - save_cache:
           key: dfs-v0-{{ .Branch }}-{{ .Revision }}
           when: always
@@ -51,6 +53,7 @@ jobs:
   test_singularity:
     machine:
       *machine_kwds
+    working_directory: ~/neurodocker
     steps:
       - checkout:
           *checkout_kwds
@@ -76,7 +79,8 @@ jobs:
           no_output_timeout: 360m
           command: |
             source ~/.bashrc
-            pytest -k 'test_singularity' ~/neurodocker/neurodocker
+            pytest --cov -k 'test_singularity' neurodocker
+            codecov
       - save_cache:
           key: srs-v0-{{ .Branch }}-{{ .Revision }}
           when: always
@@ -86,6 +90,7 @@ jobs:
   test_others:
     machine:
       *machine_kwds
+    working_directory: ~/neurodocker
     steps:
       - checkout:
           *checkout_kwds
@@ -96,7 +101,8 @@ jobs:
           no_output_timeout: 30m
           command: |
             source ~/.bashrc
-            pytest -k 'not test_docker and not test_singularity' ~/neurodocker/neurodocker
+            pytest --cov -k 'not test_docker and not test_singularity' neurodocker
+            codecov
 
 
 workflows:
