--- a/neurodocker/templates/matlabmcr.yaml
+++ b/neurodocker/templates/matlabmcr.yaml
@@ -24,6 +24,7 @@ generic:
       apt: bc libxext6 libxpm-dev libxt6
       yum: bc libXext.x86_64 libXmu libXpm libXt.x86_64
     env:
+      LD_LIBRARY_PATH: "$LD_LIBRARY_PATH:/usr/lib/x86_64-linux-gnu:{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/runtime/glnxa64:{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/bin/glnxa64:{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/sys/os/glnxa64:{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/extern/bin/glnxa64"
       MATLABCMD: "{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/toolbox/matlab"
     instructions: |
       {{ matlabmcr.install_dependencies() }}
@@ -37,8 +38,4 @@ generic:
       unzip -q /tmp/mcr.zip -d /tmp/mcrtmp
       /tmp/mcrtmp/install -destinationFolder {{ matlabmcr.install_path }} -mode silent -agreeToLicense yes
       {% endif -%}
-      echo "{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/bin/glnxa64" >> /etc/ld.so.conf.d/zmatlabmcr-{{ matlabmcr.mcr_version }}.conf
-      echo "{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/runtime/glnxa64" >> /etc/ld.so.conf.d/zmatlabmcr-{{ matlabmcr.mcr_version }}.conf
-      echo "{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/sys/glnxa64" >> /etc/ld.so.conf.d/zmatlabmcr-{{ matlabmcr.mcr_version }}.conf
-      ldconfig
       rm -rf /tmp/*
