REF+REWRITE: use yaml templates + generate singularity recipes (#157)
* add: generic installation instructions

* ref: split programs into individual yaml files

* remove minc top-level key

* fix curl and tar options

* mv generics to specs

* refactor interface classes to yaml

* update for refactor to yaml

* update interface for yaml

* update yaml specs

* add debian-based deps

* minor fixes

* fix formatting

* update dcm2niix to yaml

* updates

* attempt to use jinja2

* use macro to install apt packages

* update ants yml

* update afni yml

* rename specs dir to templates for jinja compatibility

* updates

* remove trailing slashes

* update yaml templates

* first try at subclassed objects

* misc updates

* load templates in neurodocker.interfaces

* update  import

* remove individual interfaces files

* updates

* all: template updates

* fixes matlab mcr and imports

* rename matlab yaml file

* make tar calls consistent

* add first pass at dockerfile generation

* use str.splitlines() instead of str.split('\n')

* add slash to pipe curl output to tar

* add methods to generate singularity and docker files

* update templates

* clean up

* begin removing unnecessary methods

* add init file

* update to achieve initial working status

* create generate docker subparser

* remove check_urls

* add singularity subparser + fixes

* remove ropeproject

* install deps in header

* fix indent method

* add makefile with clean command

* fix header template

* fix version in template

* add header

* add header

* do not render options for header

* update templates

* show more helpful error message

* install matlabmcr with spm12

* append matlabmcr ldlibpath

* fix spm unzip

* add matlab 2010a

* add latest url

* fix: entrypoint bash script

* remove generate.py + transfer methods to utils

* use new-style class for specs parse

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@ __pycache__
 .cache
 .DS_Store
 .ipynb_checkpoints
+.pytest_cache
 dockerfile_tests
+/scraper
 *.egg-info
+
+.coverage
+coverage.xml
 
 *.ipynb
 *.pyc
