fix: checkout to version if given

--- a/neurodocker/templates/dcm2niix.yaml
+++ b/neurodocker/templates/dcm2niix.yaml
@@ -13,6 +13,11 @@ generic:
     instructions: |
       {{ dcm2niix.install_dependencies() }}
       git clone https://github.com/rordenlab/dcm2niix /tmp/dcm2niix
+      {% if dcm2niix.version != "master" and dcm2niix.version != "latest" -%}
+      cd /tmp/dcm2niix
+      git fetch --tags
+      git checkout {{ dcm2niix.version }}
+      {% endif -%}
       mkdir /tmp/dcm2niix/build
       cd /tmp/dcm2niix/build
       cmake {{ dcm2niix.cmake_opts }} -DCMAKE_INSTALL_PREFIX:PATH={{ dcm2niix.install_path }} ..
