--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,12 @@ jobs:
             source ~/.bashrc
             pytest --cov -k 'not test_docker and not test_singularity' neurodocker
             codecov
+      - run:
+          name: Test examples in /examples directory
+          command: |
+            source ~/.bashrc
+            cd examples
+            bash test_examples.sh
 
 
 workflows:
