--- a/neurodocker/templates/mrtrix3.yaml
+++ b/neurodocker/templates/mrtrix3.yaml
@@ -6,6 +6,9 @@
 
 generic:
   binaries:
+    depndencies:
+      apt: python python-numpy
+      yum: numpy python
     urls:
       "3.0_RC3": https://dl.dropbox.com/s/2oh339ehcxcf8xf/mrtrix3-3.0_RC3-Linux-centos6.9-x86_64.tar.gz
       "3.0_RC2": https://dl.dropbox.com/s/f6y0l472wuio70x/mrtrix3-3.0_RC2-Linux-centos6.9-x86_64.tar.gz
@@ -19,12 +22,10 @@ generic:
 
   source:
     dependencies:
-      apt: g++ gcc git python make zlib1g-dev
-      yum: gcc-c++ git python make zlib-devel
+      apt: g++ gcc git libeigen3-dev make python python-numpy zlib1g-dev
+      yum: eigen3-devel gcc-c++ git make numpy python zlib-devel
     env:
-      ANTSPATH: "{{ ants.install_path }}/bin"
-      PATH: "{{ ants.install_path }}/bin:$PATH"
-      LD_LIBRARY_PATH: "{{ ants.install_path }}/lib:$LD_LIBRARY_PATH"
+      PATH: "{{ mrtrix3.install_path }}/bin:$PATH"
     instructions: |
       {{ mrtrix3.install_dependencies() }}
       mkdir -p {{ mrtrix3.install_path }}
@@ -34,4 +35,5 @@ generic:
       git checkout {{ mrtrix3.version }}
       {% endif -%}
       ./configure -nogui
+      echo "Compiling MRtrix3 ..."
       ./build
