--- a/neurodocker/templates/minc.yaml
+++ b/neurodocker/templates/minc.yaml
@@ -14,7 +14,7 @@ generic:
     dependencies:
       apt: >
         libgl1-mesa-dev libice6 libsm6 libx11-6 libxext6 libxi6 libxmu6
-        libgomp1 libjpeg62 libglu1-mesa libgl1-mesa-glx perl imagemagick libjpeg8
+        libgomp1 libjpeg62 libglu1-mesa libgl1-mesa-glx perl imagemagick 
       yum: >
         libICE libSM libX11 libXext libXi libXmu libgomp libjpeg-turbo
         mesa-libGL-devel
