fix @global_parse command not found error (#217)
* fix @global_parse command not found error

* keep PATH clean for singularity builds

* remove ampersands before rPkgsInstall

--- a/neurodocker/templates/afni.yaml
+++ b/neurodocker/templates/afni.yaml
@@ -37,7 +37,7 @@ generic:
       curl {{ afni.curl_opts }} {{ afni.binaries_url }} \
       | tar -xz -C {{ afni.install_path }} --strip-components 1
       {%- if afni.install_r_pkgs %}
-      {{ afni.install_path }}/rPkgsInstall -pkgs ALL
+      PATH=$PATH:{{ afni.install_path }} rPkgsInstall -pkgs ALL
       {% endif -%}
 
   source:
