use `opts` for cmd line options

--- a/neurodocker/templates/ndfreeze.yaml
+++ b/neurodocker/templates/ndfreeze.yaml
@@ -6,4 +6,4 @@ generic:
       apt: neurodebian-freeze
     instructions: |
       {{ ndfreeze.install_dependencies() }}
-      nd_freeze {{ ndfreeze.cmd_args | default('') }} {{ ndfreeze.date }}
+      nd_freeze {{ ndfreeze.opts | default('') }} {{ ndfreeze.date }}
