--- a/neurodocker/templates/ndfreeze.yaml
+++ b/neurodocker/templates/ndfreeze.yaml
@@ -5,5 +5,8 @@ generic:
     dependencies:
       apt: neurodebian-freeze
     instructions: |
-      {{ ndfreeze.install_dependencies() }}
+      apt-get update -qq
+      apt-get install -y -q --no-install-recommends neurodebian-freeze
       nd_freeze {{ ndfreeze.opts | default('') }} {{ ndfreeze.date }}
+      apt-get clean
+      rm -rf /var/lib/apt/lists/*
