fix: do not rm /tmp/* or /var/tmp/*
Removing everything beneath these directories causes issues when using singularity. Singularity mounts some build-time directories to /tmp and maybe /var/tmp, so removing these directories attempts to remove those files on the host. See https://github.com/sylabs/singularity/issues/2538 for more info on singularity's intended behavior. See https://github.com/kaczmarj/neurodocker/issues/246 for @yarikoptic discovery and disucssion of the issue.

--- a/neurodocker/templates/minc.yaml
+++ b/neurodocker/templates/minc.yaml
@@ -31,4 +31,4 @@ generic:
       unzip /tmp/mni_90c.zip -d {{ minc.install_path }}/share/icbm152_model_09c
       sed -i 's+MINC_TOOLKIT=/opt/minc+MINC_TOOLKIT={{ minc.install_path }}+g' {{ minc.install_path }}/minc-toolkit-config.sh
       sed -i '$isource {{ minc.install_path }}/minc-toolkit-config.sh' $ND_ENTRYPOINT
-      rm -rf /tmp/*
+      rm -rf /tmp/mni*
