--- a/neurodocker/templates/matlabmcr.yaml
+++ b/neurodocker/templates/matlabmcr.yaml
@@ -30,16 +30,18 @@ generic:
       LD_LIBRARY_PATH: "$LD_LIBRARY_PATH:/usr/lib/x86_64-linux-gnu:{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/runtime/glnxa64:{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/bin/glnxa64:{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/sys/os/glnxa64:{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/extern/bin/glnxa64"
       MATLABCMD: "{{ matlabmcr.install_path }}/{{ matlabmcr.mcr_version }}/toolbox/matlab"
     instructions: |
+      export TMPDIR="$(mktemp -d)"
       {{ matlabmcr.install_dependencies() }}
       echo "Downloading MATLAB Compiler Runtime ..."
       {% if matlabmcr.version == "2010a" -%}
       {{ matlabmcr.install_debs() }}
-      curl {{ matlabmcr.curl_opts }} -o /tmp/MCRInstaller.bin {{ matlabmcr.binaries_url }}
-      chmod +x /tmp/MCRInstaller.bin
-      /tmp/MCRInstaller.bin -silent -P installLocation="{{ matlabmcr.install_path }}"
+      curl {{ matlabmcr.curl_opts }} -o "$TMPDIR/MCRInstaller.bin" {{ matlabmcr.binaries_url }}
+      chmod +x "$TMPDIR/MCRInstaller.bin"
+      "$TMPDIR/MCRInstaller.bin" -silent -P installLocation="{{ matlabmcr.install_path }}"
       {% else -%}
-      curl {{ matlabmcr.curl_opts }} -o /tmp/mcr.zip {{ matlabmcr.binaries_url }}
-      unzip -q /tmp/mcr.zip -d /tmp/mcrtmp
-      /tmp/mcrtmp/install -destinationFolder {{ matlabmcr.install_path }} -mode silent -agreeToLicense yes
+      curl {{ matlabmcr.curl_opts }} -o "$TMPDIR/mcr.zip" {{ matlabmcr.binaries_url }}
+      unzip -q "$TMPDIR/mcr.zip" -d "$TMPDIR/mcrtmp"
+      "$TMPDIR/mcrtmp/install" -destinationFolder {{ matlabmcr.install_path }} -mode silent -agreeToLicense yes
       {% endif -%}
-      rm -rf /tmp/*
+      rm -rf "$TMPDIR"
+      unset TMPDIR
