--- a/neurodocker/templates/miniconda.yaml
+++ b/neurodocker/templates/miniconda.yaml
@@ -35,9 +35,9 @@ generic:
       conda install -y {{ miniconda.conda_opts|default("-q") }} --name {{ miniconda.env_name }} \
       {%- for pkg in miniconda.conda_install %}
           {% if not loop.last -%}
-          '{{ pkg }}' \
+          "{{ pkg }}" \
           {%- else -%}
-          '{{ pkg }}'
+          "{{ pkg }}"
           {%- endif -%}
       {% endfor %}
       sync && conda clean --all && sync
@@ -47,9 +47,9 @@ generic:
         pip install --no-cache-dir {{ miniconda.pip_opts }} \
         {%- for pkg in miniconda.pip_install %}
             {% if not loop.last -%}
-            '{{ pkg }}' \
+            "{{ pkg }}" \
             {%- else -%}
-            '{{ pkg }}'
+            "{{ pkg }}"
             {%- endif -%}
         {% endfor %}"
       rm -rf ~/.cache/pip/*
