correct `package_data`

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,9 +27,6 @@ install_requires =
     etelemetry
     jinja2>=2.0
     PyYAML>=3.0
-    neurodocker =
-        templates/*.yaml
-        reprozip/utils/reprozip_trace_runner.sh
 
 [options.extras_require]
 dev =
@@ -40,6 +37,11 @@ dev =
 [options.entry_points]
 console_scripts =
     neurodocker = neurodocker.neurodocker:main
+
+[options.package_data]
+neurodocker =
+    templates/*.yaml
+    reprozip/utils/reprozip_trace_runner.sh
 
 [versioneer]
 VCS = git
