--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,9 +34,9 @@ jobs:
           *setup_kwds
       - restore_cache:
           keys:
-            - dfs-v0-{{ .Branch }}-{{ .Revision }}
-            - dfs-v0-{{ .Branch }}
-            - dfs-v0
+            - dfs-v00-{{ .Branch }}-{{ .Revision }}
+            - dfs-v00-{{ .Branch }}
+            - dfs-v00
       - run:
           name: Test docker image builds
           no_output_timeout: 360m
@@ -44,11 +44,11 @@ jobs:
             source ~/.bashrc
             pytest --cov -k 'test_docker' neurodocker
             codecov
-      - save_cache:
-          key: dfs-v0-{{ .Branch }}-{{ .Revision }}
-          when: always
-          paths:
-            - /tmp/cache
+      # - save_cache:
+      #     key: dfs-v0-{{ .Branch }}-{{ .Revision }}
+      #     when: always
+      #     paths:
+      #       - /tmp/cache
 
   test_singularity:
     machine:
@@ -61,9 +61,9 @@ jobs:
           *setup_kwds
       - restore_cache:
           keys:
-            - srs-v0-{{ .Branch }}-{{ .Revision }}
-            - srs-v0-{{ .Branch }}
-            - srs-v0
+            - srs-v00-{{ .Branch }}-{{ .Revision }}
+            - srs-v00-{{ .Branch }}
+            - srs-v00
       - run:
           name: Install singularity
           command: |
@@ -81,11 +81,11 @@ jobs:
             source ~/.bashrc
             pytest --cov -k 'test_singularity' neurodocker
             codecov
-      - save_cache:
-          key: srs-v0-{{ .Branch }}-{{ .Revision }}
-          when: always
-          paths:
-            - ~/tmp/cache
+      # - save_cache:
+      #     key: srs-v000-{{ .Branch }}-{{ .Revision }}
+      #     when: always
+      #     paths:
+      #       - ~/tmp/cache
 
   test_others:
     machine:
